# devstack

./: .gitignore  .gitreview  .mailmap  .zuul.yaml  AUTHORS  CONTRIBUTING.rst  FUTURE.rst  HACKING.rst  MAINTAINERS.rst  Makefile  README  README-SEAS.txt  README.md  README.rst  SYSTEMD.rst  build.sh  build_lxc.sh  build_lxc_multi.sh  build_nfs.sh  build_pxe_boot.sh  build_pxe_ramdisk.sh  clean.sh  colin.sh  contrail_config_templates.py  eucarc  exercise.sh  exerciserc  functions  functions-common  local.conf  localrc  lxc_network_hostonlyplusnat.sh  make_image.sh  make_pxe.sh  natty  net.ipv6.conf.all.forwarding=1  neutron.patch  neutron_v2.patch  neutron_v3.patch  nova_v1.patch  (+15 more)
apts/: general  nova  preseed
contrail/: README  cassandra-env.sh.patch  contrail_config_templates.py  contrail_utils.py  contrail_veth_port.py  localrc-multinode-compute  localrc-multinode-server  localrc-single  localrc.compute  localrc.master  net_policy_join.py  neutron_v3.patch  neutron_v4.patch  nova_v3.patch  nova_v4.patch  provision_vrouter.py  redis.conf.patch  services_provision.py  setup_contrail.py  test_network.sh  test_network_complex.sh
data/: devstack-plugins-registry.footer  devstack-plugins-registry.header
doc/: requirements.txt
driver_certs/: cinder_driver_cert.sh
exercises/: aggregates.sh  boot_from_volume.sh  bundle.sh  client-args.sh  client-env.sh  docker.sh  euca.sh  floating_ips.sh  horizon.sh  marconi.sh  neutron-adv-test.sh  quantum-adv-test.sh  quantum.sh  sahara.sh  savanna.sh  sec_groups.sh  swift.sh  trove.sh  volumes.sh  zaqar.sh
extras.d/: 40-dib.sh  50-ironic.sh  60-ceph.sh  70-gantt.sh  70-marconi.sh  70-sahara.sh  70-savanna.sh  70-trove.sh  (+6 more)
tools/dbcounter/: dbcounter.py  pyproject.toml  setup.cfg
(+651 files in other folders)
