[metadata]
name = dbcounter
author = Dan Smith
author_email = dms@danplanet.com
version = 0.1
description = A teeny tiny dbcounter plugin for use with devstack
url = http://github.com/openstack/devstack
license = Apache

[options]
py_modules = dbcounter
entry_points =
    [sqlalchemy.plugins]
    dbcounter = dbcounter:LogCursorEventsPlugin
